# areg

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: aReg_Categories.csv  aReg_Events.csv
docs/: PRODUCTION_INTEGRATION_PLAN.md
skills/data-analysis/: SKILL.md
skills/data-analysis/references/: llm-context.md  temporal-patterns.md
skills/data-analysis/scripts/: event_analyzer.py
skills/outside-brand-style/: SKILL.md
skills/outside-brand-style/assets/: outside-palette.css
skills/outside-brand-style/references/: chart-templates.md  color-usage.md
src/: __init__.py  analytics.py  app.py  data_loader.py  director_app.py  llm_client.py
